# ynab-readonly-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  ynab_mcp.py
.github/workflows/: ci.yml
skills/: README.md
skills/debt-payoff-planner/: SKILL.md
skills/debt-payoff-planner/scripts/: payoff_projection.py
skills/monthly-budget-review/: SKILL.md
skills/paycheck-surplus-check/: SKILL.md
skills/sinking-fund-checkup/: SKILL.md
tests/: test_readonly.py
