[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ynab-readonly-mcp"
version = "0.1.0"
description = "A read-only Model Context Protocol (MCP) server for YNAB — let an AI read your budget, with no ability to change it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Drew Grgich" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "mcp-server",
    "ynab",
    "personal-finance",
    "budgeting",
    "read-only",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ynab-readonly-mcp = "ynab_mcp:main"

[project.urls]
Homepage = "https://github.com/your-username/ynab-readonly-mcp"
Issues = "https://github.com/your-username/ynab-readonly-mcp/issues"

# Single-module project: ship just ynab_mcp.py (keeps the "one auditable file" promise).
[tool.setuptools]
py-modules = ["ynab_mcp"]
